<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    xmlns:custom="http://schemas.android.com/apk/res/com.ecslab.wifisharing"
    tools:context="com.ecslab.wifisharing.User.UserInfoActivity">

    <include layout="@layout/toolbar"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:foreground="@drawable/ripple"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:padding="@dimen/card_spacing">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/head_iv"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginLeft="@dimen/medium_spacing"
                android:src="@drawable/head"/>
            <Button
                android:id="@+id/sign_bt"
                android:layout_width="96dp"
                android:layout_height="32dp"
                android:background="@drawable/bt_bg"
                android:text="@string/change_head"
                android:layout_marginRight="@dimen/medium_spacing"
                android:textSize="@dimen/sub_medium_text"
                android:textColor="@android:color/white"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:foreground="@drawable/ripple"
        android:clickable="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="@dimen/small_spacing">
        <!--标题-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/card_spacing">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/subTextColor"
                    android:layout_marginLeft="@dimen/card_spacing"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/sub_medium_text"
                    android:text="@string/account"/>
            <com.ecslab.wifisharing.view.CardItem
                android:id="@+id/account_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:showContent="true"
                custom:name="@string/account"
                custom:showArrow="false"/>
            <com.ecslab.wifisharing.view.CardItem
                android:id="@+id/pwd_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:showContent="true"
                custom:showHint="true"
                custom:name="@string/password"
                custom:content="********"
                custom:hint="@string/reset"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:foreground="@drawable/ripple"
        android:clickable="true"
        android:layout_marginBottom="@dimen/small_spacing">
        <!--标题-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/card_spacing">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/subTextColor"
                android:layout_marginLeft="@dimen/card_spacing"
                android:layout_centerVertical="true"
                android:textSize="@dimen/sub_medium_text"
                android:text="@string/info"/>
            <com.ecslab.wifisharing.view.CardItem
                android:id="@+id/nick_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:showContent="true"
                custom:showHint="true"
                custom:name="@string/nick"
                custom:hint="@string/reset"/>
            <com.ecslab.wifisharing.view.CardItem
                android:id="@+id/sex_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:showContent="true"
                custom:showHint="true"
                custom:name="@string/sex"
                custom:content="@string/unset"
                custom:hint="@string/reset"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:layout_marginBottom="@dimen/small_spacing">
            <TextView
                android:id="@+id/logout_text"
                android:foreground="@drawable/ripple"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/card_spacing"
                android:textColor="@android:color/holo_red_light"
                android:layout_centerVertical="true"
                android:textSize="@dimen/sub_medium_text"
                android:gravity="center"
                android:text="@string/logout"/>
    </android.support.v7.widget.CardView>
</LinearLayout>
