<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/basic_theme_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/big_spacing"
                android:text="@string/create_ap"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sub_big_text"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:padding="@dimen/medium_spacing">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ap_name"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                <Switch
                    android:id="@+id/pass_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/sub_medium_spacing"
                    android:text="@string/has_ap_pass"
                    android:foreground="@drawable/ripple"
                    android:clickable="true"
                    android:textColor="@color/textColor"
                    android:switchPadding="@dimen/sub_small_spacing"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tl"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ap_pass"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>
                <Switch
                    android:id="@+id/post_switch"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/sub_medium_spacing"
                    android:text="@string/post_hotspot"
                    android:foreground="@drawable/ripple"
                    android:checked="true"
                    android:clickable="true"
                    android:textColor="@color/textColor"
                    android:switchPadding="@dimen/sub_small_spacing"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>