<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:custom="http://schemas.android.com/apk/res/com.ecslab.wifisharing"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bgColor">
    <android.support.v7.widget.Toolbar
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="5dp"
        tools:targetApi="lollipop"
        android:windowActionBarOverlay="true">
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:layout_marginBottom="@dimen/small_spacing">
        <LinearLayout
            android:id="@+id/unlogin_ll"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/medium_spacing">
            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/head"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text"
                android:layout_marginLeft="@dimen/medium_spacing"
                android:text="@string/unlogin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
            android:id="@+id/login_cl"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_spacing"
            android:foreground="?android:attr/selectableItemBackground">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/head_iv"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/head"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_bias="0.5"/>
            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/head_iv"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sub_big_text"
                tools:text="@string/app_name"
                app:layout_constraintLeft_toRightOf="@+id/head_iv"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintVertical_bias="1.0"/>

            <TextView
                android:id="@+id/tel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                tools:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sub_medium_text"
                app:layout_constraintLeft_toRightOf="@+id/head_iv"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp"
                app:layout_constraintVertical_bias="0.0"/>

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"/>

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:iiv_color="@android:color/white"
                app:iiv_icon="gmd-chevron-right"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                android:id="@+id/point_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/ripple"
                android:padding="@dimen/small_spacing">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/point"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:id="@+id/imageView"/>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text"
                    android:textColor="@color/subTextColor"
                    android:text="×20"
                    app:layout_constraintLeft_toRightOf="@+id/imageView"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:id="@+id/textView"
                    app:layout_constraintVertical_bias="0.517"/>

                <Button
                    android:id="@+id/sign_bt"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:background="@drawable/bt_bg"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/sub_medium_text"
                    android:textColor="@android:color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="0dp"
                    app:layout_constraintLeft_toRightOf="@+id/textView"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="0dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"/>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                android:foreground="@drawable/ripple"
                android:clickable="true"
                android:layout_marginBottom="@dimen/small_spacing">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/subTextColor"
                        android:layout_marginLeft="@dimen/card_spacing"
                        android:layout_marginTop="@dimen/card_spacing"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/sub_medium_text"
                        android:text="@string/user"/>
                    <com.ecslab.wifisharing.view.CardItem
                        android:id="@+id/point_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:showContent="true"
                        custom:name="@string/point_center"
                        custom:content="@string/point_op"
                        custom:showArrow="true"/>
                    <com.ecslab.wifisharing.view.CardItem
                        android:id="@+id/notification_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:showContent="true"
                        custom:content="@string/no_notification"
                        custom:name="@string/notification"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                android:foreground="@drawable/ripple"
                android:clickable="true"
                android:layout_marginBottom="@dimen/small_spacing">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/subTextColor"
                    android:layout_marginLeft="@dimen/card_spacing"
                    android:layout_marginTop="@dimen/card_spacing"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/sub_medium_text"
                    android:text="@string/other"/>
                <com.ecslab.wifisharing.view.CardItem
                    android:id="@+id/feedback_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:showContent="true"
                    custom:content="@string/help_us"
                    custom:name="@string/help"/>
                <com.ecslab.wifisharing.view.CardItem
                    android:id="@+id/about_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:showContent="true"
                    custom:content="@string/get_help"
                    custom:name="@string/about"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>